# DryDrop

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  TODO.md  mise.toml
apps/cli/: Cargo.toml
apps/cli/src/: lib.rs  main.rs
apps/cli/src/args/: mod.rs  new.rs
apps/cli/src/commands/: mod.rs  new.rs
apps/cli/src/models/: vcs.rs
crates/drydrop-config/: Cargo.toml
crates/drydrop-core/: Cargo.toml
crates/drydrop-core/src/: error.rs  lib.rs  variable.rs
crates/drydrop-diff/: Cargo.toml
crates/drydrop-engine/: Cargo.toml
crates/drydrop-engine/src/: lib.rs
crates/drydrop-error/: Cargo.toml
crates/drydrop-error/src/: lib.rs
crates/drydrop-feature/: Cargo.toml
crates/drydrop-fs/: Cargo.toml
crates/drydrop-fs/src/: reader.rs  writer.rs
crates/drydrop-generator/: Cargo.toml
crates/drydrop-generator/src/: context.rs  input.rs  lib.rs  output.rs  pipeline.rs
crates/drydrop-hook/: Cargo.toml
crates/drydrop-plugin/: Cargo.toml
crates/drydrop-plugin/src/: lib.rs
crates/drydrop-preset/: Cargo.toml
crates/drydrop-project/: Cargo.toml
crates/drydrop-registry/: Cargo.toml
crates/drydrop-registry/src/: lib.rs
crates/drydrop-registry/src/repository/: mod.rs  plugin_repository.rs  snippet_repository.rs  template_repository.rs
crates/drydrop-snippet/: Cargo.toml
crates/drydrop-snippet/src/: lib.rs
crates/drydrop-template/: Cargo.toml
crates/drydrop-template/src/: lib.rs
crates/drydrop-vfs/: Cargo.toml
crates/drydrop-vfs/src/: lib.rs  (+2 more)
docs/: book.toml
docs/src/: SUMMARY.md
docs/zh_CN/: README.md  ROADMAP.md  TODO.md
(+24 files in other folders)
