[workspace]
resolver = "3"
members = ["apps/*", "crates/*"]

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }

tera = "2.0.0"
minijinja = "2.21.0"

miniserde = { version = "0.1.45", features = ["std"] }
thiserror = "2.0.18"
eyre = "0.6.12"
dotenvy = "0.15.7"
async-trait = "0.1.89"
tokio = { version = "1.52.3", features = ["full"] }
smallvec = "2.0.0-alpha.12"
fts = "0.3.0"
camino = "1.2.3"
indexmap = "2.14.0"
